# coffeeAgntcy

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  TUTORIAL.md  mkdocs.yml
fruitAGNTCY/fruit_agents/lungo/: .env.example  README.md  docker-compose.yaml  pyproject.toml
fruitAGNTCY/fruit_agents/lungo/agents/farms/brazil/: agent.py  card.py  farm_server.py
fruitAGNTCY/fruit_agents/lungo/agents/farms/colombia/: agent.py  card.py  farm_server.py
fruitAGNTCY/fruit_agents/lungo/agents/farms/vietnam/: agent.py  card.py  farm_server.py
fruitAGNTCY/fruit_agents/lungo/agents/logistics/accountant/: card.py  server.py
fruitAGNTCY/fruit_agents/lungo/agents/logistics/farm/: card.py  server.py
fruitAGNTCY/fruit_agents/lungo/agents/logistics/helpdesk/: card.py  server.py
fruitAGNTCY/fruit_agents/lungo/agents/logistics/shipper/: card.py  server.py
fruitAGNTCY/fruit_agents/lungo/agents/mcp_servers/: payment_service.py  utils.py  weather_service.py
fruitAGNTCY/fruit_agents/lungo/agents/supervisors/auction/: main.py
fruitAGNTCY/fruit_agents/lungo/agents/supervisors/logistics/: main.py
fruitAGNTCY/fruit_agents/lungo/agents/supervisors/recruiter/: agent.py  dynamic_workflow_agent.py  main.py  recruiter_client.py  shared.py
fruitAGNTCY/fruit_agents/lungo/api/: __init__.py
fruitAGNTCY/fruit_agents/lungo/api/admin/: models_catalog.py  router.py
fruitAGNTCY/fruit_agents/lungo/api/agentic_workflows/: server.py  starting_workflows.json  workflows.py
fruitAGNTCY/fruit_agents/lungo/common/: cors.py  llm.py
fruitAGNTCY/fruit_agents/lungo/deployment/helm/local-cluster/: Chart.yaml  README.md  config-overrides.yaml.gotmpl  values.yaml
fruitAGNTCY/fruit_agents/lungo/deployment/helm/ui/: Chart.yaml  values.yaml
fruitAGNTCY/fruit_agents/lungo/docker/: Dockerfile.agentic-workflows-api  Dockerfile.auction-supervisor  Dockerfile.brazil-farm  Dockerfile.colombia-farm  Dockerfile.logistics-accountant  Dockerfile.logistics-farm  Dockerfile.logistics-helpdesk  Dockerfile.logistics-shipper  Dockerfile.logistics-supervisor  Dockerfile.payment-mcp  Dockerfile.recruiter-supervisor  Dockerfile.ui  Dockerfile.vietnam-farm  Dockerfile.weather-mcp  README.md
fruitAGNTCY/fruit_agents/lungo/docs/: Farm_Agent.md  agent_directory_integration.md  identity_integration.md
fruitAGNTCY/fruit_agents/lungo/frontend/: .env.example  README.md  package-lock.json  package.json
fruitAGNTCY/fruit_agents/lungo/frontend/src/contexts/: MuiThemeBridge.tsx
fruitAGNTCY/fruit_agents/lungo/frontend/src/utils/: urls.json
fruitAGNTCY/fruit_agents/lungo/schema/: __init__.py
fruitAGNTCY/fruit_agents/lungo/scripts/: push_oasf_records.sh
fruitAGNTCY/fruit_agents/lungo/tests/: README.md
fruitAGNTCY/fruit_agents/lungo/tests/integration/: conftest.py  docker_helpers.py
fruitAGNTCY/fruit_agents/lungo/tests/unit/openapi/: test_agentic_workflow_openapi_routes_match_app.py  test_agentic_workflow_openapi_spec.py
fruitAGNTCY/fruit_agents/lungo/tests/unit/schemas/: test_event_v1_instances.py  test_schema_types_against_validation.py  test_validate_cli.py
fruitAGNTCY/fruit_agents/recruiter/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
fruitAGNTCY/fruit_agents/recruiter/coding-agent-integrations/claude-code/.claude-plugin/: marketplace.json
fruitAGNTCY/fruit_agents/recruiter/docker/: docker-compose.yaml
fruitAGNTCY/fruit_agents/recruiter/docs/: advanced-usage.md  architecture.mmd  llm_configuration.md
fruitAGNTCY/fruit_agents/recruiter/src/agent_recruiter/agent_registries/: __init__.py  registry_search_agent.py
fruitAGNTCY/fruit_agents/recruiter/src/agent_recruiter/common/: agent_utils.py  llm.py  logging.py
fruitAGNTCY/fruit_agents/recruiter/src/agent_recruiter/interviewers/: __init__.py  agent_evaluator.py  base_evaluator_agent.py  evaluator_agent_factory.py  models.py  (+1 more)
fruitAGNTCY/fruit_agents/recruiter/tests/: agent.py
fruitAGNTCY/fruit_agents/recruiter/tests/integration/: benchmark_caching.py  conftest.py  docker_helpers.py  test_a2a.py  test_agent_evaluator.py  test_caching.py
fruitAGNTCY/fruit_agents/recruiter/tests/sample_agent/: __init__.py  agent.py  sample_agent_record.json  server.py
(+95 files in other folders)
